--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
+
+		<vaadin.version>12.0.7</vaadin.version>
 	</properties>
 
 	<dependencyManagement>
@@ -29,6 +31,13 @@
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
 				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.vaadin</groupId>
+				<artifactId>vaadin-bom</artifactId>
+				<version>${vaadin.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -57,6 +66,15 @@
 				<enabled>false</enabled>
 			</snapshots>
 		</repository>
+		<repository>
+			<id>vaadin-prereleases</id>
+			<url>https://maven.vaadin.com/vaadin-prereleases</url>
+		</repository>
+		<!-- Repository used by many Vaadin add-ons -->
+		<repository>
+			<id>Vaadin Directory</id>
+			<url>http://maven.vaadin.com/vaadin-addons</url>
+		</repository>
 	</repositories>
 
 	<pluginRepositories>
@@ -72,12 +90,18 @@
 			<id>spring-milestones</id>
 			<url>https://repo.spring.io/milestone</url>
 		</pluginRepository>
+		<pluginRepository>
+			<id>vaadin-prereleases</id>
+			<url>https://maven.vaadin.com/vaadin-prereleases</url>
+		</pluginRepository>
 	</pluginRepositories>
 
 	<modules>
 		<module>poc-booking-common</module>
 		<module>poc-booking-service-cmd</module>
 		<module>poc-booking-service-qry</module>
+		<module>poc-booking-service-gateway</module>
+		<module>poc-booking-web</module>
 	</modules>
 
 </project>
